--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+.pagetemlate{
+  margin-top: 5rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  background: pink;
+  /* 그림자를 띄워줌 */
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  padding-top: 2rem;
+
+  @media(max-width: 768px){
+    margin-top:1rem;
+    width: calc(100% - 2rem);
+  }
+}
+
+h1{
   text-align: center;
+  font-size: 4rem;
+  font-weight: 300;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content{
+  margin-top: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todolist{
+  border-top: 1px;
+  border-bottom: 1px;
   display: flex;
-  flex-direction: column;
+  padding: 1rem; 
+  
+}
+
+input{
   align-items: center;
+  flex: 1;
+  font-size: 1.1rem;
+  outline: none;
+  border: none;
+  background: transparent;
+  border-bottom: 1px solid;
+}
+
+button{
+  width: 5rem;
+  height: 2rem;
+  margin-left: 1rem;
+  border: 1px solid;
+  color: green;
+  font-size: 1.1rem;
+  font-weight: 500;
+  
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  cursor: pointer;
 }
