--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 500px;
-  background: skyblue;
+  background: blue;
   /* 그림자를 띄워줌 */
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   padding-top: 2rem;
